CMAKE_MINIMUM_REQUIRED(VERSION 3.1)

CUDA_ADD_EXECUTABLE(basic_interop basic_interop.cu)
SET_PROPERTY(TARGET basic_interop  PROPERTY FOLDER chapter08)

CUDA_ADD_EXECUTABLE(heat_8 heat.cu)
SET_PROPERTY(TARGET heat_8  PROPERTY FOLDER chapter08)
TARGET_LINK_LIBRARIES(heat_8 ${GLUT_LIBRARY})

CUDA_ADD_EXECUTABLE(ripple_8 ripple.cu)
SET_PROPERTY(TARGET ripple_8  PROPERTY FOLDER chapter08)
TARGET_LINK_LIBRARIES(ripple_8 ${GLUT_LIBRARY})


